<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.margaret.travelsa_quiz.ProvinceSelection"
    tools:showIn="@layout/activity_province_selection"
    android:background="#f9f681">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectionTitle"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:labelFor="@id/scrollView"
            android:gravity="start|end" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="3"
            android:layout_gravity="center_horizontal">
            <!-- Row One -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/kzn"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/wc"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/mp"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <!-- Row Two -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/lp"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/ec"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/fs"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <!-- Row Three -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/gp"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/nc"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/nw"
                android:onClick="nextPage"
                android:textSize="18sp"
                android:background="#8c9eff"
                android:layout_margin="10dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">
            </Button>
        </GridLayout>
    </LinearLayout>

</ScrollView>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHelp"
        android:id="@+id/btnSelectionToHelp"
        android:onClick="goToHelp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#8c9eff"
        android:layout_margin="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

</RelativeLayout>
